lib/antlr/SnowStarParser.cpp

// Generated from SnowStarParser.g4 by ANTLR 4.7.1


#include "SnowStarParserVisitor.h"

#include "SnowStarParser.h"


using namespace antlrcpp;
using namespace antlr4;

SnowStarParser::SnowStarParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SnowStarParser::~SnowStarParser() {
  delete _interpreter;
}

std::string SnowStarParser::getGrammarFileName() const {
  return "SnowStarParser.g4";
}

const std::vector<std::string>& SnowStarParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SnowStarParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- CompilationUnitContext ------------------------------------------------------------------

SnowStarParser::CompilationUnitContext::CompilationUnitContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::CompilationUnitContext::EOF() {
  return getToken(SnowStarParser::EOF, 0);
}

std::vector<SnowStarParser::DeclarationSeqContext *> SnowStarParser::CompilationUnitContext::declarationSeq() {
  return getRuleContexts<SnowStarParser::DeclarationSeqContext>();
}

SnowStarParser::DeclarationSeqContext* SnowStarParser::CompilationUnitContext::declarationSeq(size_t i) {
  return getRuleContext<SnowStarParser::DeclarationSeqContext>(i);
}


size_t SnowStarParser::CompilationUnitContext::getRuleIndex() const {
  return SnowStarParser::RuleCompilationUnit;
}

antlrcpp::Any SnowStarParser::CompilationUnitContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitCompilationUnit(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::CompilationUnitContext* SnowStarParser::compilationUnit() {
  CompilationUnitContext *_localctx = _tracker.createInstance<CompilationUnitContext>(_ctx, getState());
  enterRule(_localctx, 0, SnowStarParser::RuleCompilationUnit);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(55);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SnowStarParser::BOOL)
      | (1ULL << SnowStarParser::CHR)
      | (1ULL << SnowStarParser::I8)
      | (1ULL << SnowStarParser::I16)
      | (1ULL << SnowStarParser::I32)
      | (1ULL << SnowStarParser::I64)
      | (1ULL << SnowStarParser::F32)
      | (1ULL << SnowStarParser::F64)
      | (1ULL << SnowStarParser::STR)
      | (1ULL << SnowStarParser::VOID)
      | (1ULL << SnowStarParser::WITH)
      | (1ULL << SnowStarParser::UNIT)
      | (1ULL << SnowStarParser::DTYPE)
      | (1ULL << SnowStarParser::IMPORT)
      | (1ULL << SnowStarParser::SEMI)
      | (1ULL << SnowStarParser::IDENTIFIER))) != 0)) {
      setState(52);
      declarationSeq();
      setState(57);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(58);
    match(SnowStarParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationSeqContext ------------------------------------------------------------------

SnowStarParser::DeclarationSeqContext::DeclarationSeqContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SnowStarParser::FunctionDeclarationContext* SnowStarParser::DeclarationSeqContext::functionDeclaration() {
  return getRuleContext<SnowStarParser::FunctionDeclarationContext>(0);
}

SnowStarParser::VariableDeclarationContext* SnowStarParser::DeclarationSeqContext::variableDeclaration() {
  return getRuleContext<SnowStarParser::VariableDeclarationContext>(0);
}

SnowStarParser::UnitDeclarationContext* SnowStarParser::DeclarationSeqContext::unitDeclaration() {
  return getRuleContext<SnowStarParser::UnitDeclarationContext>(0);
}

SnowStarParser::DtypeDeclarationContext* SnowStarParser::DeclarationSeqContext::dtypeDeclaration() {
  return getRuleContext<SnowStarParser::DtypeDeclarationContext>(0);
}

SnowStarParser::WithDeclarationContext* SnowStarParser::DeclarationSeqContext::withDeclaration() {
  return getRuleContext<SnowStarParser::WithDeclarationContext>(0);
}

SnowStarParser::ImportDeclarationContext* SnowStarParser::DeclarationSeqContext::importDeclaration() {
  return getRuleContext<SnowStarParser::ImportDeclarationContext>(0);
}

SnowStarParser::EmptyDeclarationContext* SnowStarParser::DeclarationSeqContext::emptyDeclaration() {
  return getRuleContext<SnowStarParser::EmptyDeclarationContext>(0);
}


size_t SnowStarParser::DeclarationSeqContext::getRuleIndex() const {
  return SnowStarParser::RuleDeclarationSeq;
}

antlrcpp::Any SnowStarParser::DeclarationSeqContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitDeclarationSeq(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::DeclarationSeqContext* SnowStarParser::declarationSeq() {
  DeclarationSeqContext *_localctx = _tracker.createInstance<DeclarationSeqContext>(_ctx, getState());
  enterRule(_localctx, 2, SnowStarParser::RuleDeclarationSeq);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(67);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(60);
      functionDeclaration();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(61);
      variableDeclaration();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(62);
      unitDeclaration();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(63);
      dtypeDeclaration();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(64);
      withDeclaration();
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(65);
      importDeclaration();
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(66);
      emptyDeclaration();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableDeclarationContext ------------------------------------------------------------------

SnowStarParser::VariableDeclarationContext::VariableDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SnowStarParser::TheTypeContext* SnowStarParser::VariableDeclarationContext::theType() {
  return getRuleContext<SnowStarParser::TheTypeContext>(0);
}

SnowStarParser::VariableNameContext* SnowStarParser::VariableDeclarationContext::variableName() {
  return getRuleContext<SnowStarParser::VariableNameContext>(0);
}

tree::TerminalNode* SnowStarParser::VariableDeclarationContext::SEMI() {
  return getToken(SnowStarParser::SEMI, 0);
}

SnowStarParser::VariableInitializerContext* SnowStarParser::VariableDeclarationContext::variableInitializer() {
  return getRuleContext<SnowStarParser::VariableInitializerContext>(0);
}


size_t SnowStarParser::VariableDeclarationContext::getRuleIndex() const {
  return SnowStarParser::RuleVariableDeclaration;
}

antlrcpp::Any SnowStarParser::VariableDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitVariableDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::VariableDeclarationContext* SnowStarParser::variableDeclaration() {
  VariableDeclarationContext *_localctx = _tracker.createInstance<VariableDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 4, SnowStarParser::RuleVariableDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(69);
    theType();
    setState(70);
    variableName();
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SnowStarParser::ASSIGN) {
      setState(71);
      variableInitializer();
    }
    setState(74);
    match(SnowStarParser::SEMI);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableNameContext ------------------------------------------------------------------

SnowStarParser::VariableNameContext::VariableNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::VariableNameContext::IDENTIFIER() {
  return getToken(SnowStarParser::IDENTIFIER, 0);
}


size_t SnowStarParser::VariableNameContext::getRuleIndex() const {
  return SnowStarParser::RuleVariableName;
}

antlrcpp::Any SnowStarParser::VariableNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitVariableName(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::VariableNameContext* SnowStarParser::variableName() {
  VariableNameContext *_localctx = _tracker.createInstance<VariableNameContext>(_ctx, getState());
  enterRule(_localctx, 6, SnowStarParser::RuleVariableName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    match(SnowStarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VariableInitializerContext ------------------------------------------------------------------

SnowStarParser::VariableInitializerContext::VariableInitializerContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::VariableInitializerContext::ASSIGN() {
  return getToken(SnowStarParser::ASSIGN, 0);
}

SnowStarParser::ExpressionContext* SnowStarParser::VariableInitializerContext::expression() {
  return getRuleContext<SnowStarParser::ExpressionContext>(0);
}


size_t SnowStarParser::VariableInitializerContext::getRuleIndex() const {
  return SnowStarParser::RuleVariableInitializer;
}

antlrcpp::Any SnowStarParser::VariableInitializerContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitVariableInitializer(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::VariableInitializerContext* SnowStarParser::variableInitializer() {
  VariableInitializerContext *_localctx = _tracker.createInstance<VariableInitializerContext>(_ctx, getState());
  enterRule(_localctx, 8, SnowStarParser::RuleVariableInitializer);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(78);
    match(SnowStarParser::ASSIGN);
    setState(79);
    expression(0);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnitDeclarationContext ------------------------------------------------------------------

SnowStarParser::UnitDeclarationContext::UnitDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::UnitDeclarationContext::UNIT() {
  return getToken(SnowStarParser::UNIT, 0);
}

SnowStarParser::UnitNameContext* SnowStarParser::UnitDeclarationContext::unitName() {
  return getRuleContext<SnowStarParser::UnitNameContext>(0);
}

SnowStarParser::BasicBlockDeclarationContext* SnowStarParser::UnitDeclarationContext::basicBlockDeclaration() {
  return getRuleContext<SnowStarParser::BasicBlockDeclarationContext>(0);
}


size_t SnowStarParser::UnitDeclarationContext::getRuleIndex() const {
  return SnowStarParser::RuleUnitDeclaration;
}

antlrcpp::Any SnowStarParser::UnitDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitUnitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::UnitDeclarationContext* SnowStarParser::unitDeclaration() {
  UnitDeclarationContext *_localctx = _tracker.createInstance<UnitDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 10, SnowStarParser::RuleUnitDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(81);
    match(SnowStarParser::UNIT);
    setState(82);
    unitName();
    setState(83);
    basicBlockDeclaration();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UnitNameContext ------------------------------------------------------------------

SnowStarParser::UnitNameContext::UnitNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::UnitNameContext::IDENTIFIER() {
  return getToken(SnowStarParser::IDENTIFIER, 0);
}


size_t SnowStarParser::UnitNameContext::getRuleIndex() const {
  return SnowStarParser::RuleUnitName;
}

antlrcpp::Any SnowStarParser::UnitNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitUnitName(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::UnitNameContext* SnowStarParser::unitName() {
  UnitNameContext *_localctx = _tracker.createInstance<UnitNameContext>(_ctx, getState());
  enterRule(_localctx, 12, SnowStarParser::RuleUnitName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(85);
    match(SnowStarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BasicBlockDeclarationContext ------------------------------------------------------------------

SnowStarParser::BasicBlockDeclarationContext::BasicBlockDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::BasicBlockDeclarationContext::LBRACE() {
  return getToken(SnowStarParser::LBRACE, 0);
}

tree::TerminalNode* SnowStarParser::BasicBlockDeclarationContext::RBRACE() {
  return getToken(SnowStarParser::RBRACE, 0);
}

std::vector<SnowStarParser::StatementSeqContext *> SnowStarParser::BasicBlockDeclarationContext::statementSeq() {
  return getRuleContexts<SnowStarParser::StatementSeqContext>();
}

SnowStarParser::StatementSeqContext* SnowStarParser::BasicBlockDeclarationContext::statementSeq(size_t i) {
  return getRuleContext<SnowStarParser::StatementSeqContext>(i);
}


size_t SnowStarParser::BasicBlockDeclarationContext::getRuleIndex() const {
  return SnowStarParser::RuleBasicBlockDeclaration;
}

antlrcpp::Any SnowStarParser::BasicBlockDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitBasicBlockDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::BasicBlockDeclarationContext* SnowStarParser::basicBlockDeclaration() {
  BasicBlockDeclarationContext *_localctx = _tracker.createInstance<BasicBlockDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 14, SnowStarParser::RuleBasicBlockDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    match(SnowStarParser::LBRACE);
    setState(91);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SnowStarParser::BOOL)
      | (1ULL << SnowStarParser::CHR)
      | (1ULL << SnowStarParser::I8)
      | (1ULL << SnowStarParser::I16)
      | (1ULL << SnowStarParser::I32)
      | (1ULL << SnowStarParser::I64)
      | (1ULL << SnowStarParser::F32)
      | (1ULL << SnowStarParser::F64)
      | (1ULL << SnowStarParser::STR)
      | (1ULL << SnowStarParser::VOID)
      | (1ULL << SnowStarParser::WITH)
      | (1ULL << SnowStarParser::IMPORT)
      | (1ULL << SnowStarParser::SEMI)
      | (1ULL << SnowStarParser::IDENTIFIER))) != 0)) {
      setState(88);
      statementSeq();
      setState(93);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(94);
    match(SnowStarParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DtypeDeclarationContext ------------------------------------------------------------------

SnowStarParser::DtypeDeclarationContext::DtypeDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::DtypeDeclarationContext::DTYPE() {
  return getToken(SnowStarParser::DTYPE, 0);
}

SnowStarParser::DtypeNameContext* SnowStarParser::DtypeDeclarationContext::dtypeName() {
  return getRuleContext<SnowStarParser::DtypeNameContext>(0);
}

SnowStarParser::DtypeBlockDeclarationContext* SnowStarParser::DtypeDeclarationContext::dtypeBlockDeclaration() {
  return getRuleContext<SnowStarParser::DtypeBlockDeclarationContext>(0);
}


size_t SnowStarParser::DtypeDeclarationContext::getRuleIndex() const {
  return SnowStarParser::RuleDtypeDeclaration;
}

antlrcpp::Any SnowStarParser::DtypeDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitDtypeDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::DtypeDeclarationContext* SnowStarParser::dtypeDeclaration() {
  DtypeDeclarationContext *_localctx = _tracker.createInstance<DtypeDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 16, SnowStarParser::RuleDtypeDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(SnowStarParser::DTYPE);
    setState(97);
    dtypeName();
    setState(98);
    dtypeBlockDeclaration();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DtypeNameContext ------------------------------------------------------------------

SnowStarParser::DtypeNameContext::DtypeNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::DtypeNameContext::IDENTIFIER() {
  return getToken(SnowStarParser::IDENTIFIER, 0);
}


size_t SnowStarParser::DtypeNameContext::getRuleIndex() const {
  return SnowStarParser::RuleDtypeName;
}

antlrcpp::Any SnowStarParser::DtypeNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitDtypeName(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::DtypeNameContext* SnowStarParser::dtypeName() {
  DtypeNameContext *_localctx = _tracker.createInstance<DtypeNameContext>(_ctx, getState());
  enterRule(_localctx, 18, SnowStarParser::RuleDtypeName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(100);
    match(SnowStarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DtypeBlockDeclarationContext ------------------------------------------------------------------

SnowStarParser::DtypeBlockDeclarationContext::DtypeBlockDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::DtypeBlockDeclarationContext::LBRACE() {
  return getToken(SnowStarParser::LBRACE, 0);
}

tree::TerminalNode* SnowStarParser::DtypeBlockDeclarationContext::RBRACE() {
  return getToken(SnowStarParser::RBRACE, 0);
}

std::vector<SnowStarParser::VariableDeclarationContext *> SnowStarParser::DtypeBlockDeclarationContext::variableDeclaration() {
  return getRuleContexts<SnowStarParser::VariableDeclarationContext>();
}

SnowStarParser::VariableDeclarationContext* SnowStarParser::DtypeBlockDeclarationContext::variableDeclaration(size_t i) {
  return getRuleContext<SnowStarParser::VariableDeclarationContext>(i);
}


size_t SnowStarParser::DtypeBlockDeclarationContext::getRuleIndex() const {
  return SnowStarParser::RuleDtypeBlockDeclaration;
}

antlrcpp::Any SnowStarParser::DtypeBlockDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitDtypeBlockDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::DtypeBlockDeclarationContext* SnowStarParser::dtypeBlockDeclaration() {
  DtypeBlockDeclarationContext *_localctx = _tracker.createInstance<DtypeBlockDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 20, SnowStarParser::RuleDtypeBlockDeclaration);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(102);
    match(SnowStarParser::LBRACE);
    setState(106);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << SnowStarParser::BOOL)
      | (1ULL << SnowStarParser::CHR)
      | (1ULL << SnowStarParser::I8)
      | (1ULL << SnowStarParser::I16)
      | (1ULL << SnowStarParser::I32)
      | (1ULL << SnowStarParser::I64)
      | (1ULL << SnowStarParser::F32)
      | (1ULL << SnowStarParser::F64)
      | (1ULL << SnowStarParser::STR)
      | (1ULL << SnowStarParser::VOID)
      | (1ULL << SnowStarParser::IDENTIFIER))) != 0)) {
      setState(103);
      variableDeclaration();
      setState(108);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(109);
    match(SnowStarParser::RBRACE);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionDeclarationContext ------------------------------------------------------------------

SnowStarParser::FunctionDeclarationContext::FunctionDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SnowStarParser::TheTypeContext* SnowStarParser::FunctionDeclarationContext::theType() {
  return getRuleContext<SnowStarParser::TheTypeContext>(0);
}

SnowStarParser::FunctionNameContext* SnowStarParser::FunctionDeclarationContext::functionName() {
  return getRuleContext<SnowStarParser::FunctionNameContext>(0);
}

SnowStarParser::FunctionParamsContext* SnowStarParser::FunctionDeclarationContext::functionParams() {
  return getRuleContext<SnowStarParser::FunctionParamsContext>(0);
}

SnowStarParser::BasicBlockDeclarationContext* SnowStarParser::FunctionDeclarationContext::basicBlockDeclaration() {
  return getRuleContext<SnowStarParser::BasicBlockDeclarationContext>(0);
}


size_t SnowStarParser::FunctionDeclarationContext::getRuleIndex() const {
  return SnowStarParser::RuleFunctionDeclaration;
}

antlrcpp::Any SnowStarParser::FunctionDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitFunctionDeclaration(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::FunctionDeclarationContext* SnowStarParser::functionDeclaration() {
  FunctionDeclarationContext *_localctx = _tracker.createInstance<FunctionDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 22, SnowStarParser::RuleFunctionDeclaration);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    theType();
    setState(112);
    functionName();
    setState(113);
    functionParams();
    setState(114);
    basicBlockDeclaration();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionNameContext ------------------------------------------------------------------

SnowStarParser::FunctionNameContext::FunctionNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::FunctionNameContext::IDENTIFIER() {
  return getToken(SnowStarParser::IDENTIFIER, 0);
}


size_t SnowStarParser::FunctionNameContext::getRuleIndex() const {
  return SnowStarParser::RuleFunctionName;
}

antlrcpp::Any SnowStarParser::FunctionNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitFunctionName(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::FunctionNameContext* SnowStarParser::functionName() {
  FunctionNameContext *_localctx = _tracker.createInstance<FunctionNameContext>(_ctx, getState());
  enterRule(_localctx, 24, SnowStarParser::RuleFunctionName);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(116);
    match(SnowStarParser::IDENTIFIER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionParamsContext ------------------------------------------------------------------

SnowStarParser::FunctionParamsContext::FunctionParamsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SnowStarParser::FunctionParamsContext::LPAREN() {
  return getToken(SnowStarParser::LPAREN, 0);
}

tree::TerminalNode* SnowStarParser::FunctionParamsContext::RPAREN() {
  return getToken(SnowStarParser::RPAREN, 0);
}

std::vector<SnowStarParser::ParameterDeclarationContext *> SnowStarParser::FunctionParamsContext::parameterDeclaration() {
  return getRuleContexts<SnowStarParser::ParameterDeclarationContext>();
}

SnowStarParser::ParameterDeclarationContext* SnowStarParser::FunctionParamsContext::parameterDeclaration(size_t i) {
  return getRuleContext<SnowStarParser::ParameterDeclarationContext>(i);
}

std::vector<tree::TerminalNode *> SnowStarParser::FunctionParamsContext::COMMA() {
  return getTokens(SnowStarParser::COMMA);
}

tree::TerminalNode* SnowStarParser::FunctionParamsContext::COMMA(size_t i) {
  return getToken(SnowStarParser::COMMA, i);
}


size_t SnowStarParser::FunctionParamsContext::getRuleIndex() const {
  return SnowStarParser::RuleFunctionParams;
}

antlrcpp::Any SnowStarParser::FunctionParamsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SnowStarParserVisitor*>(visitor))
    return parserVisitor->visitFunctionParams(this);
  else
    return visitor->visitChildren(this);
}

SnowStarParser::FunctionParamsContext* SnowStarParser::functionParams() {
  FunctionParamsContext *_localctx = _tracker.createInstance<FunctionParamsContext>(_ctx, getState());
  enterRule(_localctx, 26, SnowStarParser::RuleFunctionParams);
  size_t _la = 0;
